--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
     "httpx>=0.28.1",
+    "python-dotenv>=1.0.1",
 ]
 
 [project.optional-dependencies]
